@@ -1,3 +1,7 @@
+2004/02/08 00:05 (-0500) rwmcfa1
+
+	* GParamSpec.xs, t/b.t: added GParamSpec->scalar, and tested it.
+
 2004/02/08 20:46 (-0500) muppetman
 
 	* Glib.pm, README, NEWS: unstable release 1.034
